#9 Merged duplicate TimeSpan files

--- a/docs/api-reference/CRMScript.Native.WeekSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.WeekSchedule.yml
@@ -71,7 +71,7 @@ items:
   nameWithType: WeekSchedule.addTimeSpan(DateTime,TimeSpan)
   fullName: CRMScript.Native.WeekSchedule.addTimeSpan(DateTime,TimeSpan)
   type: Method
-  summary: "\nAdds a timespan to the schedule.\n"
+  summary: "\nAdds a time span to the schedule.\n"
   remarks: 
   syntax: 
     content: DateTime addTimeSpan(DateTime start, TimeSpan add)
@@ -80,8 +80,8 @@ items:
       type: CRMScript.Global.DateTime
       description: Start time for calculation
     - id: add
-      type: CRMScript.Native.TimeSpan
-      description: The timespan to add (2 days, 1 hours, 5 minutes, 30 seconds...)
+      type: CRMScript.Global.TimeSpan
+      description: The time span to add (2 days, 1 hours, 5 minutes, 30 seconds...)
     return:
       type: CRMScript.Native.DateTime
       description:
@@ -108,7 +108,7 @@ items:
       type: CRMScript.Global.DateTime
       description: Stop time for calculation
     return:
-      type: CRMScript.Native.TimeSpan
+      type: CRMScript.Global.TimeSpan
       description:
   example: 
 - uid: CRMScript.Native.WeekSchedule.getFriStart()
@@ -776,9 +776,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Native.TimeSpan
-  commentId: T:CRMScript.Native.TimeSpan
+- uid: CRMScript.Global.TimeSpan
+  commentId: T:CRMScript.Global.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Native.TimeSpan
+  fullName: CRMScript.Global.TimeSpan
