--- a/docs/api-reference/CRMScript.Global.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Global.TimeSpan.yml
@@ -6,11 +6,434 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.Global.TimeSpan.#ctor
+  - CRMScript.Global.TimeSpan.addDay(Integer)
+  - CRMScript.Global.TimeSpan.addHour(Integer)
+  - CRMScript.Global.TimeSpan.addMin(Integer)
+  - CRMScript.Global.TimeSpan.addSec(Integer)
+  - CRMScript.Global.TimeSpan.addYear(Integer)
+  - CRMScript.Global.TimeSpan.getDay()
+  - CRMScript.Global.TimeSpan.getHour()
+  - CRMScript.Global.TimeSpan.getMin()
+  - CRMScript.Global.TimeSpan.getSec()
+  - CRMScript.Global.TimeSpan.getYear()
+  - CRMScript.Global.TimeSpan.isNegative()
+  - CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  - CRMScript.Global.TimeSpan.setNegative(Bool)
+  - CRMScript.Global.TimeSpan.toDays()
+  - CRMScript.Global.TimeSpan.toHours()
+  - CRMScript.Global.TimeSpan.toMinutes()
+  - CRMScript.Global.TimeSpan.toSeconds()
+  - CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
   name: TimeSpan
   nameWithType: TimeSpan
   fullName: CRMScript.Global.TimeSpan
   type: Class
-  summary:
+  summary: "\nA class for representing a time span.\n"
+  example: 
+- uid: CRMScript.Global.TimeSpan.#ctor
+  commentId: M:CRMScript.Global.TimeSpan.#ctor
+  id: '#ctor'
+  so.intellisense: Void.TimeSpan
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: TimeSpan.#ctor
+  fullName: CRMScript.Global.TimeSpan.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the TimeSpan class.\n"
+  remarks: 
+  syntax: 
+    content: TimeSpan
+  example: 
+- uid: CRMScript.Global.TimeSpan.addDay(Integer)
+  commentId: M:CRMScript.Global.TimeSpan.addDay(Integer)
+  id: 'addDay(Integer)'
+  so.intellisense: TimeSpan.addDay
+  langs:
+  - crmscript
+  name: 'addDay(Integer)'
+  nameWithType: TimeSpan.addDay(Integer)
+  fullName: CRMScript.Global.TimeSpan.addDay(Integer)
+  type: Method
+  summary: "\nAdds the given number of days to the currently set time span.\n"
+  remarks: 
+  syntax: 
+    content: Void addDay(Integer num)
+    parameters:
+    - id: num
+      type: CRMScript.Global.Integer
+      description: Number of days to add to the time span
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.addHour(Integer)
+  commentId: M:CRMScript.Global.TimeSpan.addHour(Integer)
+  id: 'addHour(Integer)'
+  so.intellisense: TimeSpan.addHour
+  langs:
+  - crmscript
+  name: 'addHour(Integer)'
+  nameWithType: TimeSpan.addHour(Integer)
+  fullName: CRMScript.Global.TimeSpan.addHour(Integer)
+  type: Method
+  summary: "\nAdds the given number of hours to the currently set time span.\n"
+  remarks: 
+  syntax: 
+    content: Void addHour(Integer num)
+    parameters:
+    - id: num
+      type: CRMScript.Global.Integer
+      description: Number of hours to add to the time span
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.addMin(Integer)
+  commentId: M:CRMScript.Global.TimeSpan.addMin(Integer)
+  id: 'addMin(Integer)'
+  so.intellisense: TimeSpan.addMin
+  langs:
+  - crmscript
+  name: 'addMin(Integer)'
+  nameWithType: TimeSpan.addMin(Integer)
+  fullName: CRMScript.Global.TimeSpan.addMin(Integer)
+  type: Method
+  summary: "\nAdds the given number of minutes to the currently set time span.\n"
+  remarks: 
+  syntax: 
+    content: Void addMin(Integer num)
+    parameters:
+    - id: num
+      type: CRMScript.Global.Integer
+      description: Number of minutes to add to the time span
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.addSec(Integer)
+  commentId: M:CRMScript.Global.TimeSpan.addSec(Integer)
+  id: 'addSec(Integer)'
+  so.intellisense: TimeSpan.addSec
+  langs:
+  - crmscript
+  name: 'addSec(Integer)'
+  nameWithType: TimeSpan.addSec(Integer)
+  fullName: CRMScript.Global.TimeSpan.addSec(Integer)
+  type: Method
+  summary: "\nAdds the given number of seconds to the currently set time span.\n"
+  remarks: 
+  syntax: 
+    content: Void addSec(Integer num)
+    parameters:
+    - id: num
+      type: CRMScript.Global.Integer
+      description: Number of seconds to add to the time span
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.addYear(Integer)
+  commentId: M:CRMScript.Global.TimeSpan.addYear(Integer)
+  id: 'addYear(Integer)'
+  so.intellisense: TimeSpan.addYear
+  langs:
+  - crmscript
+  name: 'addYear(Integer)'
+  nameWithType: TimeSpan.addYear(Integer)
+  fullName: CRMScript.Global.TimeSpan.addYear(Integer)
+  type: Method
+  summary: "\nAdds the given number of years to the currently set time span.\n"
+  remarks: 
+  syntax: 
+    content: Void addYear(Integer num)
+    parameters:
+    - id: num
+      type: CRMScript.Global.Integer
+      description: Number of years to add to the time span
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.getDay()
+  commentId: M:CRMScript.Global.TimeSpan.getDay()
+  id: 'getDay()'
+  so.intellisense: TimeSpan.getDay
+  langs:
+  - crmscript
+  name: 'getDay()'
+  nameWithType: TimeSpan.getDay()
+  fullName: CRMScript.Global.TimeSpan.getDay()
+  type: Method
+  summary: "\nReturns the day field of the time span as an integer.\n"
+  remarks: 
+  syntax: 
+    content: Integer getDay()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Day field as an integer
+  example: 
+- uid: CRMScript.Global.TimeSpan.getHour()
+  commentId: M:CRMScript.Global.TimeSpan.getHour()
+  id: 'getHour()'
+  so.intellisense: TimeSpan.getHour
+  langs:
+  - crmscript
+  name: 'getHour()'
+  nameWithType: TimeSpan.getHour()
+  fullName: CRMScript.Global.TimeSpan.getHour()
+  type: Method
+  summary: "\nReturns the hour field of the time span as an integer.\n"
+  remarks: 
+  syntax: 
+    content: Integer getHour()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.getMin()
+  commentId: M:CRMScript.Global.TimeSpan.getMin()
+  id: 'getMin()'
+  so.intellisense: TimeSpan.getMin
+  langs:
+  - crmscript
+  name: 'getMin()'
+  nameWithType: TimeSpan.getMin()
+  fullName: CRMScript.Global.TimeSpan.getMin()
+  type: Method
+  summary: "\nReturns the minute field of the time span as an integer.\n"
+  remarks: 
+  syntax: 
+    content: Integer getMin()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.getSec()
+  commentId: M:CRMScript.Global.TimeSpan.getSec()
+  id: 'getSec()'
+  so.intellisense: TimeSpan.getSec
+  langs:
+  - crmscript
+  name: 'getSec()'
+  nameWithType: TimeSpan.getSec()
+  fullName: CRMScript.Global.TimeSpan.getSec()
+  type: Method
+  summary: "\nReturns the seconds field of the time span as an integer.\n"
+  remarks: 
+  syntax: 
+    content: Integer getSec()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.getYear()
+  commentId: M:CRMScript.Global.TimeSpan.getYear()
+  id: 'getYear()'
+  so.intellisense: TimeSpan.getYear
+  langs:
+  - crmscript
+  name: 'getYear()'
+  nameWithType: TimeSpan.getYear()
+  fullName: CRMScript.Global.TimeSpan.getYear()
+  type: Method
+  summary: "\nReturns the year field of the time span as an integer.\n"
+  remarks: 
+  syntax: 
+    content: Integer getYear()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.isNegative()
+  commentId: M:CRMScript.Global.TimeSpan.isNegative()
+  id: 'isNegative()'
+  so.intellisense: TimeSpan.isNegative
+  langs:
+  - crmscript
+  name: 'isNegative()'
+  nameWithType: TimeSpan.isNegative()
+  fullName: CRMScript.Global.TimeSpan.isNegative()
+  type: Method
+  summary: "\nChecks if this is a negative time span.\n"
+  remarks: 
+  syntax: 
+    content: Bool isNegative()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: true if this is a negative time span; otherwise, false
+  example: 
+- uid: CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  commentId: M:CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  id: 'set(Integer,Integer,Integer,Integer,Integer)'
+  so.intellisense: TimeSpan.set
+  langs:
+  - crmscript
+  name: 'set(Integer,Integer,Integer,Integer,Integer)'
+  nameWithType: TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  fullName: CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  type: Method
+  summary: "\nInitializes a time span object.\n"
+  remarks: 
+  syntax: 
+    content: Void set(Integer years, Integer days, Integer hours, Integer minutes, Integer seconds)
+    parameters:
+    - id: years
+      type: CRMScript.Global.Integer
+      description: Number of years
+    - id: days
+      type: CRMScript.Global.Integer
+      description: Number of days
+    - id: hours
+      type: CRMScript.Global.Integer
+      description: Number of hours
+    - id: minutes
+      type: CRMScript.Global.Integer
+      description: Number of minutes
+    - id: seconds
+      type: CRMScript.Global.Integer
+      description: Number of seconds
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.setNegative(Bool)
+  commentId: M:CRMScript.Global.TimeSpan.setNegative(Bool)
+  id: 'setNegative(Bool)'
+  so.intellisense: TimeSpan.setNegative
+  langs:
+  - crmscript
+  name: 'setNegative(Bool)'
+  nameWithType: TimeSpan.setNegative(Bool)
+  fullName: CRMScript.Global.TimeSpan.setNegative(Bool)
+  type: Method
+  summary: "\nPositive time span is default, but if you add a negative number of years/days/hours/minutes/seconds, you may get a negative times pan.\n"
+  remarks: 
+  syntax: 
+    content: Void setNegative(Bool negative)
+    parameters:
+    - id: negative
+      type: CRMScript.Global.Bool
+      description: 
+    return:
+      type: CRMScript.Global.Void
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.toDays()
+  commentId: M:CRMScript.Global.TimeSpan.toDays()
+  id: 'toDays()'
+  so.intellisense: TimeSpan.toDays
+  langs:
+  - crmscript
+  name: 'toDays()'
+  nameWithType: TimeSpan.toDays()
+  fullName: CRMScript.Global.TimeSpan.toDays()
+  type: Method
+  summary: "\nReturns the time span as a number of days. A one year time span will return 365.\n"
+  remarks: 
+  syntax: 
+    content: Integer toDays()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.toHours()
+  commentId: M:CRMScript.Global.TimeSpan.toHours()
+  id: 'toHours()'
+  so.intellisense: TimeSpan.toHours
+  langs:
+  - crmscript
+  name: 'toHours()'
+  nameWithType: TimeSpan.toHours()
+  fullName: CRMScript.Global.TimeSpan.toHours()
+  type: Method
+  summary: "\nReturns the time span as a number of hours. A one day time span will return 24.\n"
+  remarks: 
+  syntax: 
+    content: Integer toHours()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.toMinutes()
+  commentId: M:CRMScript.Global.TimeSpan.toMinutes()
+  id: 'toMinutes()'
+  so.intellisense: TimeSpan.toMinutes
+  langs:
+  - crmscript
+  name: 'toMinutes()'
+  nameWithType: TimeSpan.toMinutes()
+  fullName: CRMScript.Global.TimeSpan.toMinutes()
+  type: Method
+  summary: "\nReturns the time span as a number of minutes. A one hour time span will return 60.\n"
+  remarks: 
+  syntax: 
+    content: Integer toMinutes()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.toSeconds()
+  commentId: M:CRMScript.Global.TimeSpan.toSeconds()
+  id: 'toSeconds()'
+  so.intellisense: TimeSpan.toSeconds
+  langs:
+  - crmscript
+  name: 'toSeconds()'
+  nameWithType: TimeSpan.toSeconds()
+  fullName: CRMScript.Global.TimeSpan.toSeconds()
+  type: Method
+  summary: "\nReturns the time span as a number of seconds. A one minute time span will return 60.\n"
+  remarks: 
+  syntax: 
+    content: Integer toSeconds()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  commentId: M:CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  id: 'toString(Integer,Integer,Integer,Bool)'
+  so.intellisense: TimeSpan.toString
+  langs:
+  - crmscript
+  name: 'toString(Integer,Integer,Integer,Bool)'
+  nameWithType: TimeSpan.toString(Integer,Integer,Integer,Bool)
+  fullName: CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  type: Method
+  summary: # TODO
+  remarks: 
+  syntax: 
+    content: String toString(Integer mode, Integer lang, Integer maxMode, Bool short)
+    parameters:
+    - id: mode
+      type: CRMScript.Global.Integer
+      description: Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4
+    - id: lang
+      type: CRMScript.Global.Integer
+      description: 0 = Norwegian; 1 = English; 2 = German; 3 = Swedish; 4 = Danish; 5 = Dutch
+    - id: maxMode
+      type: CRMScript.Global.Integer
+      description: Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4
+    - id: short
+      type: CRMScript.Global.Bool
+      description: True if you want short version of text (e.g. "m" instead of "minutes").
+    return:
+      type: CRMScript.Global.String
+      description: A string representation of the time span, on the given format and in the given language.
+  example: 
+  - "\n<pre><code>TimeSpan ts;\nprintLine(ts.toString(3,1,1,false));</code></pre>\n"
 references:
 - uid: CRMScript.Global.TimeSpan
   commentId: T:CRMScript.Global.TimeSpan
@@ -18,3 +441,21 @@ references:
   name: TimeSpan
   nameWithType: TimeSpan
   fullName: CRMScript.Global.TimeSpan
+- uid: CRMScript.Global.Integer
+  commentId: T:CRMScript.Global.Integer
+  isExternal: true
+  name: Integer
+  nameWithType: Integer
+  fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Bool
+  commentId: T:CRMScript.Global.Bool
+  isExternal: true
+  name: Bool
+  nameWithType: Bool
+  fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
