--- a/docs/api-reference/CRMScript.Global.Bool.yml
+++ b/docs/api-reference/CRMScript.Global.Bool.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
   type: Class
-  summary: "\nA class for representing booleans as objects.True/false.<p></p>\nVariables of this type are commonly used in comparisons and conditional statements.\n"
+  summary: "\nRepresents booleans as objects. True/false.<p></p>\nVariables of this type are commonly used in comparisons and conditional statements.\n"
 - uid: CRMScript.Global.Bool.#ctor(Bool)
   commentId: M:CRMScript.Global.Bool.#ctor(Bool)
   id: '#ctor(Bool)'
@@ -47,6 +47,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: False equals 0; true equals 1.
 - uid: CRMScript.Global.Bool.toString()
   commentId: M:CRMScript.Global.Bool.toString()
   id: toString()
@@ -66,6 +67,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: "&quot;true&quot; or &quot;false&quot;"
 references:
 - uid: CRMScript.Global.Bool
   commentId: T:CRMScript.Global.Bool
