--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -32,9 +32,9 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.Date
-  name: Date(Date)
-  nameWithType: Date.Date(Date)
-  fullName: CRMScript.Global.Date.Date(Date)
+  name: '#ctor(Date)'
+  nameWithType: Date.#ctor(Date)
+  fullName: CRMScript.Global.Date.#ctor(Date)
   type: Constructor
   summary: "\nPass a value to copy into a new object.\n"
   remarks: "\nThe default value is now.\n"
@@ -54,9 +54,9 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.Date
-  name: Date(String)
-  nameWithType: Date.Date(String)
-  fullName: CRMScript.Global.Date.Date(String)
+  name: '#ctor(String)'
+  nameWithType: Date.#ctor(String)
+  fullName: CRMScript.Global.Date.#ctor(String)
   type: Constructor
   summary: "\nPass a String containing a date on format YYYY-MM-DD. The constructor will parse the text and create a Date object.\n"
   remarks: "\nThe default value is now.\n"
@@ -81,7 +81,8 @@ items:
   nameWithType: Date.toString()
   fullName: CRMScript.Global.Date.toString()
   type: Method
-  summary: "\nConverts a date value to its string representation, in ISO format.<p></p>\nOne of the most frequently used methods, typically when you are going to output something.\n"
+  summary: "\nConverts a date value to its string representation, in ISO format.\n"
+  remarks: "\nOne of the most frequently used methods, typically when you are going to output something.\n"
   example:
   - "\n<pre><code>Date d;\nString s = d.toString();</code></pre>\n"
   syntax:
