--- a/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSAccessGatewayInfo
   fullName: CRMScript.NetServer.NSAccessGatewayInfo
   type: Class
-  summary: "\nAccess gateway related data and operations.\n"
+  summary: "\nAccess gateway related data and operations. Carrier object for AccessGatewayInfo.\n"
   example: 
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSAccessGatewayInfo.#ctor
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   type: Constructor
-  summary: # TODO
+  summary: "\nInitializes a new instance of the NSAccessGatewayInfo class.\n"
   remarks: 
   syntax: 
     content: NSAccessGatewayInfo
@@ -42,14 +42,14 @@ items:
   nameWithType: NSAccessGatewayInfo.GetClientId()
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
   type: Method
-  summary: "\nReturns the registered client_id for AccessGateway OIDC.\n"
+  summary: "\nReturns the registered client ID for AccessGateway OIDC.\n"
   remarks: 
   syntax: 
     content: String GetClientId()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: The registered client ID for AccessGateway OIDC.
   example: 
   - "\n<pre><code>NSAccessGatewayInfo thing;\nString clientId = thing.GetClientId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
@@ -69,7 +69,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: The registered redirect_uri for AccessGateway OIDC.
   example: 
   - "\n<pre><code>NSAccessGatewayInfo thing;\nString redirectUri = thing.GetRedirectUri();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
@@ -82,16 +82,16 @@ items:
   nameWithType: NSAccessGatewayInfo.SetClientId(String)
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
   type: Method
-  summary: "\nSets the client_id for AccessGateway OIDC.\n"
+  summary: "\nSets the client ID for AccessGateway OIDC.\n"
   remarks: 
   syntax: 
     content: Void SetClientId(String clientId)
     parameters:
     - id: clientId
       type: CRMScript.Global.String
-      description:
+      description: Client ID for AccessGateway OIDC.
     return:
-      type: CRMScript.Global.Void 
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAccessGatewayInfo thing;\nString clientId;\nthing.SetClientId(clientId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.SetRedirectUri(String)
@@ -111,7 +111,7 @@ items:
     parameters:
     - id: redirectUri
       type: CRMScript.Global.String
-      description: 
+      description: The redirect_uri for AccessGateway OIDC.
     return:
       type: CRMScript.Global.Void
   example: 
