--- a/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSActivityInformationListItem
   fullName: CRMScript.NetServer.NSActivityInformationListItem
   type: Class
-  summary: # TODO
+  summary: "\nCarrier object for ActivityInformationListItem.\n"
   example: 
 - uid: CRMScript.NetServer.NSActivityInformationListItem.#ctor
   commentId: M:CRMScript.NetServer.NSActivityInformationListItem.#ctor
@@ -49,7 +49,7 @@ items:
     parameters: []
     return:
       type: CRMScript.NetServer.NSActivitySummary
-      description: the number of free and busy activities
+      description: The number of free and busy activities.
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nNSActivitySummary activityInformation = thing.GetActivityInformation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityInformationListItem.GetDate()
@@ -63,13 +63,13 @@ items:
   fullName: CRMScript.NetServer.NSActivityInformationListItem.GetDate()
   type: Method
   summary: "\nReturns the date that this item is valid for.\n"
-  remarks: "\nThere is exactly one item per date, ordered by date\n"
+  remarks: "\nThere is exactly one item per date, ordered by date.\n"
   syntax: 
     content: DateTime GetDate()
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      descending: the date that this item is valid for
+      descending: The date that this item is valid for.
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nDateTime date = thing.GetDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
@@ -89,7 +89,7 @@ items:
     parameters:
     - id: activityInformation
       type: CRMScript.NetServer.NSActivitySummary
-      description: the number of free and busy activities
+      description: The number of free and busy activities
     return:
       type: CRMScript.Global.Void
   example: 
@@ -111,7 +111,9 @@ items:
     parameters:
     - id: date
       type: CRMScript.Global.DateTime
-      descending: the date that this item is valid
+      descending: The date that this item is valid.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nDateTime date;\nthing.SetDate(date);</code></pre>\n"
 references:
